--- a/l10n/po/ja_JP/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for Visual Studio Code - 1.10.0 release'\n"
@@ -34,43 +34,55 @@ msgid ""
 "author: rgrunber\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 「Quarkus Tools for Visual Studio Code - 1.10.0リリース\n"
+"synopsis: Quarkus Tools for VS Codeリリースの新機能のいくつかをご紹介します。\n"
+"date: 2022-03-28\n"
+"tags: ide\n"
+"author: rgrunber\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:14
+#, fuzzy
 msgid "Quarkus Tools for Visual Studio Code 1.10.0 has been released on the https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus[VS Code Marketplace] & https://open-vsx.org/extension/redhat/vscode-quarkus[Open VSX]. For a list of all changes, please refer to the https://github.com/redhat-developer/vscode-quarkus/blob/master/CHANGELOG.md[changelog]."
-msgstr ""
+msgstr "Quarkus Tools for Visual Studio Code 1.10.0が link:https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus[VS Code Marketplaceと]  link:https://open-vsx.org/extension/redhat/vscode-quarkus[Open VSXで]リリースされました。すべての変更点のリストについては、 link:https://github.com/redhat-developer/vscode-quarkus/blob/master/CHANGELOG.md[変更履歴を]参照してください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:16
+#, fuzzy
 msgid "It’s been about 8 months since our last release of Quarkus Tools for VS Code. 8 months!! That's a really long time. We've introduced some new features in 1.10.0 that we're excited to mention and hope the wait was worth it."
-msgstr ""
+msgstr "前回のQuarkus Tools for VS Codeのリリースから約8ヶ月が経ちました。8ヶ月！？本当に長い時間ですね。1.10.0では、いくつかの新機能を導入しています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:18
+#, fuzzy
 msgid "We spent a lot of time stabilizing the release due to the introduction of support for the https://quarkus.io/guides/qute[Qute templating engine]. We've written a fault-tolerant parser for it, provided various diagnostics, code actions, completions, and done our best to make the integration between Java source files and Qute template files very smooth. In fact, there's so much new functionality there that we plan to do a separate post entirely on Qute support within the Quarkus extension. However, there’s plenty of improvements in the Quarkus tooling as well as to the underlying MicroProfile tooling."
-msgstr ""
+msgstr "link:https://quarkus.io/guides/qute[Quteテンプレートエンジンの]サポートが導入されたため、リリースの安定化に多くの時間を費やしました。私たちは、そのために耐障害性のあるパーサーを書き、様々な診断、コードアクション、補完を提供し、JavaソースファイルとQuteテンプレートファイル間の統合が非常にスムーズになるように最善を尽くしました。実際、非常に多くの新機能があるので、Quarkus拡張機能内のQuteサポートについては、別の記事を作成する予定です。しかし、Quarkusのツールにも、基盤となるMicroProfileのツールにも、多くの改良点があります。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:20
+#, fuzzy
 msgid "Here's what you can expect in 1.10.0 on the Quarkus side of things."
-msgstr ""
+msgstr "Quarkus側の1.10.0に期待することは、以下の通りです。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:22
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Configs all the way down"
-msgstr ""
+msgstr "コンフィグの全貌"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:25
+#, fuzzy
 msgid "While we had support for configuration profiles through property prefixing (eg. `%dev.name`), we now also support profile-aware files. We've added support for this, and many other features part of the MicroProfile 2.0 release."
-msgstr ""
+msgstr "これまで、プロパティのプレフィックス（例： `%dev.name` ）によって構成プロファイルをサポートしていましたが、今回、プロファイルを意識したファイルもサポートするようになりました。MicroProfile 2.0 のリリースでは、この他にも多くの機能をサポートするようになりました。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:26
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Support for configuration profiles"
-msgstr ""
+msgstr "コンフィギュレーション・プロファイルのサポート"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:26
@@ -80,30 +92,33 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:29
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Leave your JRE behind"
-msgstr ""
+msgstr "JREを置き去りにする"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:32
+#, fuzzy
 msgid "_TL;DR : On Windows, Linux, or MacOS, (x86_64 or ARM64 architecture), you won't need to provide a JRE to run the Quarkus tooling in VS Code._"
-msgstr ""
+msgstr "_TL;DR : Windows、Linux、またはMacOS（x86_64またはARM64アーキテクチャ）では、VS CodeでQuarkusツールを実行するためにJREを提供する必要はありません。_"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:34
+#, fuzzy
 msgid "Quarkus Tools, and its dependencies used to require a JRE (Java Runtime Environment version 11 or newer) in order to run. This is because the language services are Java based. However, with recent updates, our underlying Java tooling support provides its own Java runtime on `win32-x64`, `linux-x64`, `linux-arm64`, `darwin-x64`, and `darwin-arm64`. This means if you’re on such a system, ensuring the extension can locate some version of Java 11 at a minimum is no longer necessary."
-msgstr ""
+msgstr "Quarkus Toolsとその依存関係を実行するには、以前はJRE（Java Runtime Environmentバージョン11以降）が必要でした。これは、言語サービスがJavaベースであるためです。しかし、最近のアップデートにより、私たちの基盤となるJavaツールサポートは、独自のJavaランタイムを `win32-x64`, `linux-x64`, `linux-arm64`, `darwin-x64`, および `darwin-arm64` で提供しています。つまり、このようなシステムを使用している場合、拡張機能が最低限Java 11のバージョンを検出できるようにする必要はありません。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:36
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Support for all the Annotations"
-msgstr ""
+msgstr "すべてのアノテーションをサポート"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:39
+#, fuzzy
 msgid "Ok, maybe a bit of an exaggeration, but one of the things we've introduced in this new release is a small framework that makes it easier to quickly write good diagnostics for the various annotations. As a really simple example, here's the code required to support validation for the `delay` member value of the `@Scheduled` annotation."
-msgstr ""
+msgstr "ちょっと大げさかもしれませんが、この新しいリリースで導入されたもののひとつに、さまざまなアノテーションのための優れた診断をすばやく書くことを容易にする小さなフレームワークがあります。本当に簡単な例として、 `@Scheduled` アノテーションの `delay` メンバ値の検証をサポートするために必要なコードを紹介します。"
 
 #. type: delimited block -
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:48
@@ -119,24 +134,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:51
+#, fuzzy
 msgid "This handles a lot of the really easy validations while allowing us to spend more time getting the complicated stuff right."
-msgstr ""
+msgstr "これにより、本当に簡単な検証の多くを処理し、複雑なものを正しくすることに時間を割くことができるようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:53
+#, fuzzy
 msgid "In addition to making our life easier, it opens up the extension to more contributors."
-msgstr ""
+msgstr "私たちの生活が楽になるだけでなく、より多くの貢献者に拡張機能を開放することができるのです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:55
+#, fuzzy
 msgid "We've added basic validation support for `@Bulkhead`, `@Timeout`, `@Asynchronous`, and `@Scheduled` annotations."
-msgstr ""
+msgstr "`@Bulkhead`, `@Timeout`, `@Asynchronous`, `@Scheduled` のアノテーションの基本的な検証をサポートするようになりました。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:56
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Asynchronous annotation validation support"
-msgstr ""
+msgstr "非同期アノテーション検証のサポート"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:56
@@ -146,30 +164,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:59
+#, fuzzy
 msgid "In the case of `@Scheduled`, we link the cron expression back to the application property definition, much like we do for the `name` member of `@ConfigProperty`. Such cases allow us to easily relate the Java source files to their Quarkus configuration file."
-msgstr ""
+msgstr "`@Scheduled` の場合、 `@ConfigProperty` の `name` メンバと同様に、cron 式をアプリケーションのプロパティ定義にリンクします。このような場合、Java ソースファイルを Quarkus 構成ファイルに簡単に関連付けることができます。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:61
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "It's the little things"
-msgstr ""
+msgstr "それは、小さなこと"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:64
+#, fuzzy
 msgid "For our existing functionality, we wanted to cover more existing use cases, and instances where a problem can be easily flagged and a solution suggested."
-msgstr ""
+msgstr "既存の機能については、より既存のユースケースをカバーし、問題点を簡単に指摘し、解決策を提案できるようにしたいと思いました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:66
+#, fuzzy
 msgid "For example, when launching a Quarkus application, the code lens URL endpoints (enabled via. the `microprofile.tools.codeLens.urlCodeLensEnabled` setting) now supports `@ApplicationPath` and will take its value into account."
-msgstr ""
+msgstr "たとえば、Quarkusアプリケーションの起動時に、コードレンズURLエンドポイント（ `microprofile.tools.codeLens.urlCodeLensEnabled` 設定により有効）がサポートされ、 `@ApplicationPath` 、その値が考慮されるようになりました。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:67
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "ApplicationPath annotation on a type declaration"
-msgstr ""
+msgstr "型宣言のApplicationPathアノテーション"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:67
@@ -179,14 +200,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:70
+#, fuzzy
 msgid "In this example, the `@ApplicationPath` is set to `/api`, and the code on the method declaration (below) takes that into account when generating the URL."
-msgstr ""
+msgstr "この例では、 `@ApplicationPath` は `/api` に設定されており、メソッド宣言上のコード（下記）はそれを考慮して URL を生成しています。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:71
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Code lens on method declaration respects the value of ApplicationPath"
-msgstr ""
+msgstr "メソッド宣言のコードレンズは、ApplicationPathの値を尊重します。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:71
@@ -196,14 +218,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:74
+#, fuzzy
 msgid "In other annotations, like `@Retry`, we've taken the time to really warn users about usage that, while technically permitted, might be undesired."
-msgstr ""
+msgstr "また、 `@Retry` のような注釈では、技術的には許されていても、望ましくない使用方法について、時間をかけてユーザーに警告しています。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:75
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Retry annotation validation support"
-msgstr ""
+msgstr "アノテーション検証のリトライに対応"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:75
@@ -213,19 +236,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:78
+#, fuzzy
 msgid "In this example, the delay between retrying the method, and the maximum duration in which to attempt a retry are the same. This would imply these settings are not being used as intended. When member values like `jitter` & `jitterDelayUnit` are used to add more complexity, these warnings can serve as a good indication of improperly configured values."
-msgstr ""
+msgstr "この例では、メソッドを再試行するまでの遅延時間と、再試行を試みるまでの最大時間が同じです。これは、これらの設定が意図したとおりに使用されていないことを意味します。 `jitter` や `jitterDelayUnit` のようなメンバ値を使用してさらに複雑にした場合、これらの警告は不適切に設定された値を示す良い指標となります。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:80
+#, fuzzy
 msgid "For the `@ConfigProperty` annotation, we now validate the `defaultValue` member against the field declaration for some added safety."
-msgstr ""
+msgstr "`@ConfigProperty` アノテーションでは、安全性を高めるために、 `defaultValue` のメンバをフィールド宣言に対して検証するようにしました。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:81
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Validation for ConfigProperty defaultValue"
-msgstr ""
+msgstr "ConfigProperty defaultValue のバリデーション。"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:81
@@ -235,14 +260,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:84
+#, fuzzy
 msgid "If you don't use a `defaultValue`, and your property isn't defined in the application properties, we have a code action to auto-generate it as well."
-msgstr ""
+msgstr "`defaultValue` を使用せず、アプリケーションのプロパティでプロパティが定義されていない場合、同様に自動生成するコードアクションを用意しています。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:85
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Code action defaultValue"
-msgstr ""
+msgstr "コードアクション defaultValue"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:85
@@ -252,25 +278,27 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:88
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Completions too !"
-msgstr ""
+msgstr "完成度も高い"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:91
+#, fuzzy
 msgid "At the end of the day, everyone wants to spend less time trying to hunt down some obscure setting, and more time developing the logic."
-msgstr ""
+msgstr "結局のところ、誰もが、よくわからない設定を追い求める時間を減らし、ロジックの開発に時間をかけたいと思うものなのです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:93
+#, fuzzy
 msgid "If you're using the `@CacheResult` annotation on a method in your Java sources, we automatically suggest the settings available to configure it from your configuration file. It's also fairly reactive to changes so you'll always know if something has gone wrong."
-msgstr ""
+msgstr "Javaソースのメソッドに `@CacheResult` アノテーションを使用している場合、設定ファイルからそのメソッドを構成するために利用可能な設定を自動的に提案します。また、変更に対してかなり敏感に反応するので、何か問題が発生したときにいつでも知ることができます。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:94
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Completion support for CacheResult"
-msgstr ""
+msgstr "CacheResult の補完サポート"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:94
@@ -280,14 +308,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:97
+#, fuzzy
 msgid "`@ConfigMapping` is now also supported with some basic validation as well as completions for the application properties."
-msgstr ""
+msgstr "`@ConfigMapping` は、アプリケーションのプロパティを補完するだけでなく、いくつかの基本的な検証もサポートされるようになりました。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:98
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Completion support for ConfigMapping"
-msgstr ""
+msgstr "ConfigMappingの補完サポート"
 
 #. type: Target for macro image
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:98
@@ -297,8 +326,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:102
+#, fuzzy
 msgid "We hope you’ll give our VS Code extension a try and look forward to getting feedback. A huge thanks goes out to the many contributors on https://github.com/redhat-developer/vscode-quarkus[redhat-developer/vscode-quarkus], https://github.com/redhat-developer/vscode-microprofile[redhat-developer/vscode-microprofile], https://github.com/redhat-developer/quarkus-ls[redhat-developer/quarkus-ls], https://github.com/eclipse/lsp4mp[eclipse/lsp4mp], https://github.com/redhat-developer/vscode-java[redhat-developer/vscode-java], and https://github.com/eclipse/eclipse.jdt.ls[eclipse/eclipse.jdt.ls], who have helped get the project to where it is today. Stay tuned for our post on the new Qute features that have been added."
-msgstr ""
+msgstr "VS Code 拡張機能をお試しいただき、フィードバックをお待ちしています。 link:https://github.com/redhat-developer/vscode-quarkus[redhat-developer/vscode-quarkus], link:https://github.com/redhat-developer/vscode-microprofile[redhat-developer/vscode-microprofile], link:https://github.com/redhat-developer/quarkus-ls[redhat-developer/quarkus-ls], link:https://github.com/eclipse/lsp4mp[eclipse/lsp4mp], link:https://github.com/redhat-developer/vscode-java[redhat-developer/vscode-java] そして link:https://github.com/eclipse/eclipse.jdt.ls[eclipse/eclipse.jdt.ls] の多くの貢献者に感謝します。新たに追加されたQuteの機能についての投稿をお楽しみに。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:103
@@ -308,25 +338,30 @@ msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:105
+#, fuzzy
 msgid "VS Code Marketplace: https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus"
-msgstr ""
+msgstr "VSコードマーケットプレイス https://marketplace.visualstudio.com/items?itemName=redhat.vscode-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:106
+#, fuzzy
 msgid "Open VSX: https://open-vsx.org/extension/redhat/vscode-quarkus"
-msgstr ""
+msgstr "Open https://open-vsx.org/extension/redhat/vscode-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:107
+#, fuzzy
 msgid "GitHub repository: https://github.com/redhat-developer/vscode-quarkus"
-msgstr ""
+msgstr "GitHubリポジトリ https://github.com/redhat-developer/vscode-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:108
+#, fuzzy
 msgid "Open a GitHub issue: https://github.com/redhat-developer/vscode-quarkus/issues/new"
-msgstr ""
+msgstr "GitHubの課題を開く https://github.com/redhat-developer/vscode-quarkus/issues/new"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-28-vscode-quarkus-1.10.0.adoc:108
+#, fuzzy
 msgid "Changelog: https://github.com/redhat-developer/vscode-quarkus/blob/master/CHANGELOG.md"
-msgstr ""
+msgstr "Changelog: https://github.com/redhat-developer/vscode-quarkus/blob/master/CHANGELOG.md"
