--- a/l10n/po/ja_JP/_versions/main/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/openapi-swaggerui.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-19 02:29+0000\n"
+"POT-Creation-Date: 2022-04-11 02:36+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -87,7 +87,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/openapi-swaggerui.adoc:43
-msgid "We will create a `Fruit` bean and a `FruitResouce` REST resource (feel free to take a look to the xref:rest-json.adoc[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
+msgid "We will create a `Fruit` bean and a `FruitResource` REST resource (feel free to take a look to the xref:rest-json.adoc[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
 msgstr ""
 
 #. type: delimited block -
