--- a/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
@@ -71,7 +71,7 @@ msgstr "JVM モードとネイティブモード"
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:36
 msgid "Quarkus is first and foremost a Java framework, that means you can develop, package and run classic JAR applications, that's what we call *JVM mode*."
-msgstr "Quarkus は何よりもまずJava フレームワークです。つまり、従来の *JAR* アプリケーションの開発、パッケージ化、実行を行うことができます。これは、*JAM モード* と呼ばれます。"
+msgstr "Quarkus は何よりもまずJava フレームワークです。つまり、従来の *JAR* アプリケーションの開発、パッケージ化、実行を行うことができます。これは、*JVM モード* と呼ばれます。"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:37
