--- a/l10n/po/ja_JP/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc.po
@@ -3,72 +3,69 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-29 21:23+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-04-30 21:36+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "gsmet"
 msgstr "gsmet"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2022-04-19"
 msgstr "2022-04-19"
 
 #. type: YAML Front Matter: layout
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "post"
-msgstr "ポスト"
+msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2.8.1.Final is the first maintenance release for our 2.8 release train."
 msgstr "2.8.1.Final は、2.8 リリーストレインの最初のメンテナンスリリースです。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "release"
-msgstr "リリース"
+msgstr "release"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus 2.8.1.Final released - Maintenance release"
 msgstr "Quarkus 2.8.1.Finalリリース - メンテナンスリリース"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:11
-#, fuzzy
 msgid "Today, we released 2.8.1.Final which, as usual, only contains bugfixes and documentation improvements."
 msgstr "本日、2.8.1.Finalをリリースしましたが、例によってバグフィックスとドキュメントの改善のみが含まれています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:13
-#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.8."
-msgstr "すでに2.8をお使いの方も安心してアップグレードしていただけます。"
+msgstr "これは、すでに2.8をお使いの方にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:15
-#, fuzzy
 msgid "If you are not using 2.8 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.8[2.8 migration guide]."
-msgstr "まだ2.8をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.8[2.8移行ガイドを]ご参照ください。"
+msgstr "まだ2.8をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.8[2.8移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:16
@@ -78,9 +75,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:19
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.8.1.Final[the full changelog of 2.8.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.8.1.Final[2.8.1.Finalの全変更履歴は、GitHubで]ご覧いただけます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.8.1.Final[GitHubで2.8.1.Finalの全変更履歴]をご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2022-04-19-quarkus-2-8-1-final-released.adoc:20
