--- a/l10n/po/ja_JP/_guides/kogito-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-dev-services.adoc.po
@@ -3,37 +3,35 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-01 15:34+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/kogito-dev-services.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Dev Services for Kogito"
-msgstr "小木戸の開発サービス"
+msgstr "Dev Services for Kogito"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:14
-#, fuzzy
 msgid "If any Kogito process-related extension is present (e.g. `kogito-quarkus` or `kogito-quarkus-processes`), Dev Services for Kogito automatically starts a Data Index in dev mode.  So, you don't have to start it manually or have any other service set-up manually.  The application is configured automatically, meaning that will replicate any Kogito messaging events related to Process Instances and User Tasks into the provisioned Data Index instance."
 msgstr "いずれかのKogitoプロセス関連のエクステンションが存在する場合（例： `kogito-quarkus` または `kogito-quarkus-processes` ）、Dev Services for Kogitoは自動的にdevモードでデータ・インデックスを開始します。そのため、手動で起動したり、他のサービスを手動でセットアップする必要はありません。アプリケーションは自動的に構成され、プロセス・インスタンスやユーザー・タスクに関連するあらゆるKogitoメッセージング・イベントをプロビジョニングされたData Indexインスタンスにレプリケートすることを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:16
-#, fuzzy
 msgid "Additionally, xref:dev-ui.adoc[Dev UI] available at http://localhost:8080/q/dev[/q/dev] complements this feature with a Dev UI page which helps to Query Data Index via its GraphiQL UI."
 msgstr "さらに、 link:http://localhost:8080/q/dev[/q/dev]で利用可能な link:dev-ui.html[Dev UI]は、GraphiQL UIを介してデータ・インデックスを照会するのに役立つDev UIページでこの機能を補完します。"
 
@@ -58,61 +56,53 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:22
-#, fuzzy
 msgid "For more details about how to query data about processes and user tasks, please visit https://docs.kogito.kie.org/latest/html_single/#ref-data-index-service-queries_kogito-configuring[Kogito Data Index documentation]."
-msgstr "プロセスやユーザー・タスクに関するデータを照会する方法の詳細については、 link:https://docs.kogito.kie.org/latest/html_single/#ref-data-index-service-queries_kogito-configuring[Kogito Data Index documentation]をご覧ください。"
+msgstr "プロセスやユーザー・タスクに関するデータを照会する方法の詳細については、 link:https://docs.kogito.kie.org/latest/html_single/#ref-data-index-service-queries_kogito-configuring[Kogito Data Index ドキュメント]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-dev-services.adoc:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Enabling / Disabling Dev Services for Kogito"
-msgstr "Kogitoの開発サービスの有効化／無効化"
+msgstr "Dev Services for Kogitoの有効化／無効化"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:26
-#, fuzzy
 msgid "Dev Services for Kogito is automatically enabled unless:"
-msgstr "KogitoのDev Servicesが自動的に有効になります。"
+msgstr "Dev Services for Kogitoは以下の条件以外で自動的に有効になります。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:28
-#, fuzzy
 msgid "`quarkus.kogito.devservices.enabled` is set to `false`"
-msgstr "`quarkus.kogito.devservices.enabled` が設定されています。 `false`"
+msgstr "`quarkus.kogito.devservices.enabled` が `false` にセットされていること"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:31
-#, fuzzy
 msgid "Dev Services for Kogito relies on Docker to start the broker.  If your environment does not support Docker, you will need to start the broker manually, or connect to an already running Data Index."
 msgstr "Dev Services for Kogitoは、ブローカーの起動にDockerを使用しています。お使いの環境がDockerをサポートしていない場合は、ブローカーを手動で起動するか、すでに稼働しているData Indexに接続する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-dev-services.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Shared Data Index"
-msgstr "共有データインデックス"
+msgstr "共有Data Index"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:36
-#, fuzzy
 msgid "In case you would like to share the Data Index instance between applications.  Dev Services for Kogito implements a _service discovery_ mechanism for your multiple Quarkus applications running in _dev_ mode to share a single instance."
-msgstr "Data Indexのインスタンスをアプリケーション間で共有したい場合。Dev Services for Kogitoは、 _開発_モードで動作する複数のQuarkusアプリケーションが1つのインスタンスを共有するための _サービス発見_メカニズムを実装しています。"
+msgstr "Data Indexのインスタンスをアプリケーション間で共有したい場合。Dev Services for Kogitoは、 _dev_ モードで動作する複数のQuarkusアプリケーションが1つのインスタンスを共有するための _サービスディスカバリー_ メカニズムを実装しています。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:38
-#, fuzzy
 msgid "Dev Services for Kogito starts the container with the `kogito-dev-service-data-index` label which is used to identify the container."
 msgstr "Dev Services for Kogito は、コンテナを識別するために使用される `kogito-dev-service-data-index` のラベルでコンテナを起動します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:42
-#, fuzzy
 msgid "If you need multiple (shared) Data Index instances, you can configure the `quarkus.kogito.devservices.service-name` attribute and indicate the instance name.  It looks for a container with the same value, or starts a new one if none can be found.  The default service name is `kogito-data-index`."
 msgstr "複数の（共有）Data Indexインスタンスが必要な場合は、 `quarkus.kogito.devservices.service-name` 属性を設定し、インスタンス名を示します。同じ値のコンテナを探し、見つからない場合は新しいコンテナを開始します。デフォルトのサービス名は `kogito-data-index` です。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:45
-#, fuzzy
 msgid "Sharing is enabled by default in dev mode.  You can disable the sharing with `quarkus.kogito.devservices.shared=false`."
 msgstr "devモードでは、デフォルトで共有が有効になっています。 `quarkus.kogito.devservices.shared=false` で共有を無効にすることができます。"
 
@@ -124,9 +114,8 @@ msgstr "ポートの設定"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:50
-#, fuzzy
 msgid "By default, Dev Services for Kogito starts a Data Index using port 8180.  You can set the port by configuring the `quarkus.kogito.devservices.port` property."
-msgstr "既定では、Dev Services for Kogito はポート 8180 を使用してデータ・インデックスを開始します。ポートを設定するには、 `quarkus.kogito.devservices.port` プロパティを構成します。"
+msgstr "既定では、Dev Services for Kogito はポート 8180 を使用してData Indexを開始します。ポートを設定するには、 `quarkus.kogito.devservices.port` プロパティを構成します。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-dev-services.adoc:51
@@ -136,9 +125,8 @@ msgstr "イメージの設定"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:55
-#, fuzzy
 msgid "Dev Services for Kogito uses: `kiegroup/kogito-data-index-ephemeral` images.  You can select any version from https://quay.io/repository/kiegroup/kogito-data-index-ephemeral?tab=tags."
-msgstr "Dev Services for Kogito uses: `kiegroup/kogito-data-index-ephemeral` images. https://quay.io/repository/kiegroup/kogito-data-index-ephemeral?tab=tags  から任意のバージョンを選択できます。"
+msgstr "Dev Services for Kogito `kiegroup/kogito-data-index-ephemeral` イメージを使用します。 https://quay.io/repository/kiegroup/kogito-data-index-ephemeral?tab=tags から任意のバージョンを選択できます。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-dev-services.adoc:59
@@ -154,18 +142,15 @@ msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:64
-#, fuzzy
 msgid "xref:dev-ui.adoc[Dev UI]"
-msgstr "link:dev-ui.html[Dev UI]"
+msgstr "xref:dev-ui.adoc[Dev UI]"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:65
-#, fuzzy
 msgid "https://docs.kogito.kie.org/latest/html_single/[Kogito Documentation]"
-msgstr "link:https://docs.kogito.kie.org/latest/html_single/[コギト・ドキュメンテーション]"
+msgstr "https://docs.kogito.kie.org/latest/html_single/[Kogitoドキュメント]"
 
 #. type: Plain text
 #: upstream/_guides/kogito-dev-services.adoc:65
-#, fuzzy
 msgid "xref:kogito.adoc[Quarkus - Kogito]"
-msgstr "link:kogito.html[Quarkus - 小木戸]"
+msgstr "xref:kogito.adoc[Quarkus - Kogito]"
