--- a/l10n/po/ja_JP/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-06 18:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-07 22:46+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc:1
@@ -24,7 +24,7 @@ msgstr "gsmet"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2022-05-06"
 msgstr "2022-05-06"
 
@@ -36,7 +36,7 @@ msgstr "post"
 
 #. type: YAML Front Matter: synopsis
 #: upstream/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2.8.3.Final is the third maintenance release for our 2.8 release train."
 msgstr "2.8.3.Final は、2.8 リリーストレインの 3 回目のメンテナンスリリースです。"
 
@@ -48,13 +48,12 @@ msgstr "release"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus 2.8.3.Final released - Maintenance release"
 msgstr "Quarkus 2.8.3.Finalリリース - メンテナンスリリース"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc:12
-#, fuzzy
 msgid "We just released Quarkus 2.8.3.Final which is the third and probably last maintenance release for our 2.8 release train.  2.9.0.Final will be released next week."
 msgstr "Quarkus 2.8.3.Finalをリリースしました。これは、2.8リリーストレインの3つ目で、おそらく最後のメンテナンスリリースです。2.9.0.Finalは来週リリースされる予定です。"
 
@@ -76,9 +75,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc:20
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.8.3.Final[the full changelog of 2.8.3.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.8.3.Final[2.8.3.Finalの全変更履歴は、GitHubで] ご覧いただけます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.8.3.Final[GitHubで2.8.3.Finalの全変更履歴] をご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2022-05-06-quarkus-2-8-3-final-released.adoc:21
